--- a/index.html
+++ b/index.html
@@ -86,18 +86,24 @@
             <img
               src="./image/section2/Rectangle 71-2.jpg"
               alt="A computer with opened application"
+              width="360"
+              height="300"
             />
           </li>
           <li>
             <img
               src="./image/section2/Rectangle 71-1.jpg"
               alt="A phone with opened messenger"
+              width="360"
+              height="300"
             />
           </li>
           <li>
             <img
               src="./image/section2/Rectangle 71.jpg"
               alt="A phone with opened website"
+              width="360"
+              height="300"
             />
           </li>
         </ul>
@@ -108,22 +114,42 @@
         <h2>Our Team</h2>
         <ul>
           <li>
-            <img src="./image/section3/img-3.jpg" alt="Mark Guerrero's photo" />
+            <img
+              src="./image/section3/img-3.jpg"
+              alt="Mark Guerrero's photo"
+              width="264"
+              height="260"
+            />
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
           <li>
-            <img src="./image/section3/img-2.jpg" alt="Tom Ford's photo" />
+            <img
+              src="./image/section3/img-2.jpg"
+              alt="Tom Ford's photo"
+              width="264"
+              height="260"
+            />
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
-            <img src="./image/section3/img-1.jpg" alt="Camila Garcia's photo" />
+            <img
+              src="./image/section3/img-1.jpg"
+              alt="Camila Garcia's photo"
+              width="264"
+              height="260"
+            />
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
           </li>
           <li>
-            <img src="./image/section3/img.jpg" alt="Daniel Wilson's photo" />
+            <img
+              src="./image/section3/img.jpg"
+              alt="Daniel Wilson's photo"
+              width="264"
+              height="260"
+            />
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
           </li>
