--- a/index.html
+++ b/index.html
@@ -9,11 +9,9 @@
   <body>
     <!--Header section-->
     <header>
+      <a href="./index.html">Webstudio</a>
       <nav>
         <ul>
-          <li>
-            <a href="./index.html">Webstudio</a>
-          </li>
           <li>
             <a href="./index.html">Studio</a>
           </li>
@@ -84,7 +82,7 @@
         <ul>
           <li>
             <img
-              src="./image/section2/Rectangle 71-2.jpg"
+              src="./image/section2/computer.jpg"
               alt="A computer with opened application"
               width="360"
               height="300"
@@ -92,7 +90,7 @@
           </li>
           <li>
             <img
-              src="./image/section2/Rectangle 71-1.jpg"
+              src="./image/section2/phone-messenger.jpg"
               alt="A phone with opened messenger"
               width="360"
               height="300"
@@ -100,7 +98,7 @@
           </li>
           <li>
             <img
-              src="./image/section2/Rectangle 71.jpg"
+              src="./image/section2/phone-app.jpg"
               alt="A phone with opened website"
               width="360"
               height="300"
@@ -115,7 +113,7 @@
         <ul>
           <li>
             <img
-              src="./image/section3/img-3.jpg"
+              src="./image/section3/markguerrero.jpg"
               alt="Mark Guerrero's photo"
               width="264"
               height="260"
@@ -125,7 +123,7 @@
           </li>
           <li>
             <img
-              src="./image/section3/img-2.jpg"
+              src="./image/section3/tomford.jpg"
               alt="Tom Ford's photo"
               width="264"
               height="260"
@@ -135,7 +133,7 @@
           </li>
           <li>
             <img
-              src="./image/section3/img-1.jpg"
+              src="./image/section3/camilagarcia.jpg"
               alt="Camila Garcia's photo"
               width="264"
               height="260"
@@ -145,7 +143,7 @@
           </li>
           <li>
             <img
-              src="./image/section3/img.jpg"
+              src="./image/section3/danielwilson.jpg"
               alt="Daniel Wilson's photo"
               width="264"
               height="260"
@@ -159,7 +157,7 @@
 
     <!--Footer-->
     <footer>
-      <h2>Webstudio</h2>
+      <a href="./index.html">Webstudio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
